Changed Credits Info to be more accurate and changed Style href to the correct path in the App Files

--- a/public/HTML/credits.html
+++ b/public/HTML/credits.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credits</title>
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="/HTML/CSS/style.css">
 </head>
 <body>
     <div class="wrapperCR">
@@ -30,7 +30,7 @@
         <div class="content">
             <h1>Credits</h1>
             <span>
-                <h3>HTML/CSS • </h3><p></p></p>
+                <h3>HTML/CSS • </h3><p>Kenneth Salanga</p></p>
             </span>
             <span>
                 <h3>Scripting • </h3><p>Kenneth Salanga</p>
@@ -38,17 +38,16 @@
             <span>
                 <h3>Libraries and References • </h3>
                 <p>
-                    <a href="https://github.com/Kagami/vmsg" target="_blank">vmsg,</a>
-                    <a href="https://blog.addpipe.com/recording-mp3-audio-in-html5-using-vmsg-a-webassembly-library-based-on-lame/" target="_blank">Pipe,</a>
-                    <a href="https://www.w3schools.com/" target="_blank">W3schools</a>
+                    <a href="https://github.com/ksalanga/" target="_blank">Github,</a>
+                    <a href="https://github.com/ksalanga/AudioUploader/blob/main/package.json" target="_blank">Dependencies</a>
                 </p>
             </span>
-
-            <div class="section2">
-                <h1>Patrons:</h1>
-                <p>John Stone • Ponnappa Priya • Mia Wong • Peter Stanbridge • Natalie Lee-Walsh • Ang Li • Nguta Ithya • Tamzyn French • Salome Simoes • Trevor Virtue Tarryn • Campbell-Gillies • Eugenia Anders • Andrew Kazantzis • Verona Blair • Jane Meldrum • Maureen M. Smith • Desiree Burch • Daly Harry • Hayman Andrews • Ruveni Ellawala • John Stone • Ponnappa Priya • Mia Wong • Peter Stanbridge • Natalie Lee-Walsh • Ang Li • Nguta Ithya • Tamzyn French • Salome Simoes • Trevor Virtue Tarryn</p>
-                <p class="patreon">Add your name: <a href="credits.html">https://www.patreon.com/leaveamessage</a></p>
-            </div>
+            <span>
+                <h3>Contact • </h3>
+                <p>
+                    email: kennethsalanga@gmail.com
+                </p>
+            </span>
         </div>
     </div>
 </body>
