--- a/public/HTML/credits.html
+++ b/public/HTML/credits.html
@@ -30,7 +30,7 @@
         <div class="content">
             <h1>Credits</h1>
             <span>
-                <h3>HTML/CSS • </h3><p>Kenneth Salanga</p></p>
+                <h3>HTML/CSS • </h3><p>Kenneth Salanga, Eric Yoon</p></p>
             </span>
             <span>
                 <h3>Scripting • </h3><p>Kenneth Salanga</p>
